--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.14",
+    "gantt-elastic": "^1.0.0",
+    "gantt-elastic-header": "^0.1.11",
+    "quasar": "^1.0.0-beta.24",
+    "quasar-extras": "^2.0.4",
+    "quasar-framework": "^0.17.0",
     "vue": "^2.6.10",
-    "vue-chartjs": "^3.4.2"
+    "vue-chartjs": "^3.4.2",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-imports": "1.5.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-quasar": "^0.17.1",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
