--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.6.12",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
@@ -18,7 +19,9 @@
     "quasar-extras": "^2.0.4",
     "quasar-framework": "^0.17.0",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.3.5",
     "vue-chartjs": "^3.4.2",
+    "vue-charts": "^0.2.1",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
